--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run clean && tsc",
     "clean": "rm -rf ./dist",
     "watch": "tsc --watch",
-    "preinstall": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "author": "CodetrixStudio",
   "license": "MIT",
