--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
 /tmp
 /out-tsc
 
@@ -44,3 +43,4 @@ iOS/build
 iOS/Pods
 iOS/public
 iOS/**/xcuserdata
+android/.gradle
